# rustpress

./: .cursorrules  .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README-DOCKER.md  README.md  docker-compose.yml  example_plugin_manifest.toml  manifest.toml  package-lock.json  package.json  seed_data.toml
.github/workflows/: docker-publish.yml
admin-frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
admin-frontend/src/: App.tsx  main.tsx  types.ts
admin-frontend/src/components/Admin/: AdminPanel.tsx  PluginPermissionsModal.tsx  PluginsPage.tsx  PostsPage.tsx  SettingsPage.tsx  UsersPage.tsx
admin-frontend/src/components/Auth/: LoginForm.tsx
admin-frontend/src/services/: api.ts
core/: Cargo.toml
core/src/: ai.rs  app.rs  lib.rs  main.rs  metrics.rs  metrics_middleware.rs  rpk.rs  seed.rs
core/src/api/: mod.rs  page_controller.rs  post_controller.rs  routes.rs  upload_controller.rs
core/src/api/admin_api/: metrics_controller.rs  mod.rs  openai_controller.rs  plugin_controller.rs  post_controller.rs  settings_helper.rs  user_controller.rs
core/src/api/admin_api/core/src/entity/: plugin_permissions.rs  plugins.rs  post_drafts.rs  posts.rs
core/src/auth/: basic_auth.rs  jwt.rs  middleware.rs  mod.rs
core/src/dto/: admin.rs  openai.rs  plugin.rs  post.rs
core/src/entity/: mod.rs  openai_api_keys.rs  plugins.rs  post_drafts.rs  posts.rs  settings.rs  users.rs
core/src/plugin/: ai.rs  engine.rs  hook_registry.rs  loaded_plugin.rs  logger.rs  mod.rs  registry.rs
core/src/plugin/host/: ai.rs  logger.rs  metrics.rs  mod.rs  permissions.rs  posts.rs
core/src/plugin/types/: post.rs
core/src/repository/: mod.rs  openai_api_key_repository.rs  post_repository.rs  postgres_openai_api_key_repository.rs  postgres_repository.rs  user_repository.rs
core/src/storage/: local_storage.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/Auth/: LoginForm.tsx  LoginModal.tsx
frontend/src/components/Blog/: CreatePost.tsx  PostDetail.test.tsx  PostDetail.tsx  PostList.tsx  PostVersionDetail.tsx  PostVersions.tsx
frontend/src/components/Layout/: NavBar.tsx  SideBar.tsx
frontend/src/components/Markdown/: MarkdownRenderer.tsx  markdown.css
frontend/src/components/Pages/: CreatePostPage.tsx  EditPostPage.tsx  HomePage.tsx  PostDetailPage.tsx
frontend/src/entity/: openai_api_keys.rs  plugins.rs  post_versions.rs  posts.rs  prelude.rs  settings.rs  users.rs
frontend/src/services/: api.ts
frontend/src/utils/: markdown.test.ts  markdown.ts  url.ts
migrations/: README.md
plugin_samples/ai_metrics/: Cargo.toml  README.md
plugin_samples/ai_metrics/src/: lib.rs  logger.rs
plugin_samples/ai_metrics/wit/: ai.wit  metrics.wit  world.wit
plugin_samples/auto-category-plugin/: Cargo.toml  README.md  manifest.toml
plugin_samples/auto-category-plugin/src/: lib.rs  plugin_world.rs
plugin_samples/auto-summary/: Cargo.toml  README.md
plugin_samples/auto-summary/src/: lib.rs
plugin_samples/poetry/: Cargo.toml  README.md
plugin_samples/poetry-plugin/: Cargo.toml  README.md  manifest.toml
plugin_samples/poetry-plugin/src/: lib.rs  plugin_world.rs
plugin_samples/poetry/src/: lib.rs  logger.rs
plugin_samples/poetry/wit/: hooks.wit  permissions.wit  posts.wit
rustpress-cli/: Cargo.toml
rustpress-cli/rustpress-cli/test-templates/: Cargo.toml  README.md
rustpress-cli/rustpress-cli/test-templates/src/: lib.rs
rustpress-cli/rustpress-cli/test-templates/wit/: hooks.wit  logger.wit
rustpress-cli/src/: cli.rs  main.rs
rustpress-cli/src/commands/: plugin.rs
rustpress-cli/src/commands/plugin/: build.rs  mod.rs  new.rs  pack.rs  update.rs
rustpress-cli/templates/: .gitignore.tmpl  Cargo.toml.tmpl  README.md.tmpl  lib.rs.tmpl
rustpress-cli/templates/src/: lib.rs.tmpl
rustpress-migration/: Cargo.toml  README.md
rustpress-migration/src/: lib.rs  m20251230_000001_init_schema.rs  m20251231_000002_add_versioning_and_drafts.rs  m20260101_000003_add_settings_and_plugins.rs  main.rs
rustpress-migration/src/migrations/: m20251230_000001_init_schema.rs  m20260102_000004_add_openai_api_keys.rs  m20260103_000005_add_plugin_manifest.rs  m20260104_000006_add_plugin_permissions.rs  m20260105_000007_add_plugin_status.rs  m20260105_000010_add_description_to_post_drafts.rs  m20260106_000008_add_plugin_id.rs  m20260107_000009_add_granted_permissions.rs  mod.rs
rustpress-sdk/: Cargo.toml
rustpress-sdk/src/: lib.rs
src/: hook_registry.rs  lib.rs  main.rs  rpk.rs
src/api/: mod.rs  page_controller.rs  post_controller.rs  routes.rs  upload_controller.rs  user_controller.rs
src/api/admin_api/: admin_controller.rs  mod.rs  openai_controller.rs  plugin_controller.rs
src/auth/: middleware.rs  mod.rs
src/dto/: admin.rs  mod.rs  openai.rs  plugin.rs  post.rs  user.rs
src/entity/: mod.rs  plugin_permissions.rs  plugins.rs  post_drafts.rs  post_versions.rs  posts.rs  prelude.rs  settings.rs  users.rs
src/migration/: mod.rs
src/plugin/: ai.rs  executor.rs  hook_registry.rs  mod.rs  permissions.rs  plugin_world.rs  registry.rs
src/repository/: mod.rs  post_repository.rs  postgres_repository.rs  postgres_user_repository.rs
src/storage/: local_storage.rs  mod.rs  storage_trait.rs
wit/: hooks.wit  plugin.wit  post-hooks.wit  types.wit  world.wit
(+6 files in other folders)
