[package]
name = "rustpress"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sea-orm = { version = "0.12", features = ["runtime-tokio-native-tls", "sqlx-postgres", "macros", "chrono", "uuid"] }
sea-orm-migration = { version = "0.12", features = ["runtime-tokio-native-tls"] }
async-trait = "0.1"
dotenv = "0.15"
regex = "1.12.2"
url = "2.5"
utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
toml = "0.8"