[package]
name = "rustpress-core"
version.workspace = true
edition.workspace = true

[dependencies]
rustpress-migration = { path = "../rustpress-migration" }
sea-orm-migration = { version = "0.12", features = ["runtime-tokio-native-tls"] }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde", "std"] }
sea-orm = { version = "0.12", features = ["runtime-tokio-native-tls", "sqlx-postgres", "macros", "chrono", "uuid"] }
async-trait = "0.1"
dotenv = "0.15"
regex = "1.12.2"
url = "2.5"
utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
toml = "0.8"
color-eyre = "0.6"
zip = "0.6"
base64 = "0.21"
thiserror = "1.0"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "native-tls", "http2"] }
wasmtime = { version = "20.0", features = ["component-model"] }
wasmtime-wasi = "20.0"
wasi-common = "20.0"
tempfile = "3.8"
futures = "0.3"
wit-bindgen = "0.50.0"
anyhow = "1.0.100"
bytes = "1.0"
prometheus = "0.13"
lazy_static = "1.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "rustpress"
path = "src/main.rs"