[package]
name = "rustpress-migration"
version.workspace = true
edition.workspace = true

[lib]
name = "rustpress_migration"
path = "src/lib.rs"

[[bin]]
name = "rustpress-migrate"
path = "src/main.rs"

[dependencies]
sea-orm-migration = { version = "0.12", features = ["runtime-tokio-native-tls"] }
sea-orm = { version = "0.12", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.12.2"
serde_json = "1.0"