[workspace]

[package]
name = "auto-summary"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
log = "0.4"
wit-bindgen = "0.50"
rand = "0.9.2"

# 🔥 Rustpress Plugin Configuration
# Uncomment and modify the following sections to configure your plugin

[package.metadata.rustpress]
# Display name for the plugin
title = "auto-summary"
# Icon path (relative to plugin root)
icon = "assets/icon.png"
# Unique package identifier
package-id = "com.example.auto-summary"

# Hooks this plugin implements (functions exported from WIT)
hooks = [
    "filter_post_published",
    # "on_page_view",
    # "on_user_login"
]

# Plugin permissions
[package.metadata.rustpress.permissions]
# Required permissions - plugin cannot function without these
required = [
    "ai:chat",            # AI chat completion access
    "posts:list_categories", # List categories access
]

# Optional permissions - enhance functionality but not required
optional = [
    # "ai:list_models",    # AI model listing access
]